# commit-critic

./: CLAUDE.md  README.md  commit_critic.py  pyproject.toml  requirements.txt  test_commit_critic.py
